--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 			<article>
 				<div id="contentsBlock">
 					<section id="area01">
-            <h1>SHIMA ERINA</h1>
+            <div class="name_area">
+              <h1>SHIMA ERINA</h1>
+              <p>Web Engineer &amp Designer</p>
+            </div>
             <!--pink ball-->
             <div class="deco_bubble01 deco"></div>
             <!--/pink ball-->
