--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   
-
+<!--ローディング-->
 <div class="loading">
     <div class="loading-text">
         <span class="loading-text-words">L</span>
@@ -33,9 +33,11 @@
         <span class="loading-text-words">G</span>
     </div>
 </div>
-
+<!--/ローディング-->
 	<div id="wrap">
 		<header>
+      <ul class="">
+      </nav>
 		</header>
 		<div id="mainBlock">
 			<article>
@@ -50,6 +52,9 @@
             <!--/pink ball-->
             <!--blue ball-->
             <div class="deco_bubble02 deco"></div>
+            <!--/blue ball-->
+            <!--blue ball-->
+            <div class="deco_bubble03 deco"></div>
             <!--/blue ball-->
 					</section>
 					<!-- /contentsBlock -->
