--- a/index.html
+++ b/index.html
@@ -21,23 +21,9 @@
 </head>
 <body>
   
-<!--ローディング-->
-<div class="loading">
-    <div class="loading-text">
-        <span class="loading-text-words">L</span>
-        <span class="loading-text-words">O</span>
-        <span class="loading-text-words">A</span>
-        <span class="loading-text-words">D</span>
-        <span class="loading-text-words">I</span>
-        <span class="loading-text-words">N</span>
-        <span class="loading-text-words">G</span>
-    </div>
-</div>
-<!--/ローディング-->
 	<div id="wrap">
 		<header>
-      <ul class="">
-      </nav>
+      <ul class=""></ul>
 		</header>
 		<div id="mainBlock">
 			<article>
@@ -57,6 +43,13 @@
             <div class="deco_bubble03 deco"></div>
             <!--/blue ball-->
 					</section>
+          <section id="area02">
+            <ul class="chart_area">
+              <li class="chart" data-percent="75"><span>26%</span></li>
+              <li class="chart" data-percent="15"><span>15%</span></li>
+              <li class="chart" data-percent="83"><span>50%</span></li>
+            </ul>
+          </section>
 					<!-- /contentsBlock -->
 				</div>
 			</article>
