--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+	<title>SHIMA ERINA's Portfolio</title>
+	<meta name="description" content="マークアップエンジニア　島 絵梨奈のポートフォリオです。">
+	<meta name="keywords" content="島　絵梨奈,ポートフォリオ,マークアップエンジニア">
 	<link rel="stylesheet" href="common/css/html5reset.css">
 	<link rel="stylesheet" href="common/css/base.css">
 	<link rel="stylesheet" href="common/css/parts.css">
 	<link rel="stylesheet" href="css/top.css">
 	<link rel="icon" href="/favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@600&display=swap" rel="stylesheet"> 
-	<!--[if lt IE 9]>
+ 	<link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@600&display=swap" rel="stylesheet"> 
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css" />
+	 <!--[if lt IE 9]>
 		<script src="/common/js/html5shiv-printshiv.min.js"></script>
 		<script src="/common/js/css3-mediaqueries.js"></script>
 	<![endif]-->
@@ -23,47 +24,119 @@
   
 	<div id="wrap">
 		<header>
-      <ul class=""></ul>
+			<ul id="nav">
+				<li><a href="#area02">ABOUT</a></li>
+				<li><a href="#area03">SKILL</a></li>
+				<li><a href="#area04">WORKS</a></li>
+				<li><a href="#area05">CONTACT</a></li>
+			</ul>
 		</header>
 		<div id="mainBlock">
 			<article>
 				<div id="contentsBlock">
-					<section id="area01">
-            <div class="name_area">
-              <h1>SHIMA ERINA</h1>
-              <p>Web Engineer &amp Designer</p>
-            </div>
-            <!--pink ball-->
-            <div class="deco_bubble01 deco"></div>
-            <!--/pink ball-->
-            <!--blue ball-->
-            <div class="deco_bubble02 deco"></div>
-            <!--/blue ball-->
-            <!--blue ball-->
-            <div class="deco_bubble03 deco"></div>
-            <!--/blue ball-->
+					<section id="area01" class="inviewbox">
+						<div class="name_area">
+						<h1>SHIMA ERINA</h1>
+						<p>Web Engineer &amp Designer</p>
+						</div>
+						<!--pink ball-->
+						<div class="deco_bubble01 deco"></div>
+						<!--/pink ball-->
+						<!--blue ball-->
+						<div class="deco_bubble02 deco"></div>
+						<!--/blue ball-->
+						<!--blue ball-->
+						<div class="deco_bubble03 deco"></div>
+						<!--/blue ball-->
+						<!--pink ball-->
+						<div class="deco_bubble04 deco"></div>
+						<!--/pink ball-->
 					</section>
-          <section id="area02">
-            <ul class="chart_area">
-              <li class="chart" data-percent="75"><span>75%</span></li>
-              <li class="chart" data-percent="15"><span>15%</span></li>
-              <li class="chart" data-percent="50"><span>50%</span></li>
-            </ul>
-          </section>
+					<section id="area02">
+						<h2 class="inviewbox">ABOUT</h2>
+						<div class="circle inviewbox"></div>
+						<div class="profile inviewbox">
+							<h3 class="mb30">島 絵梨奈</h3>
+							<p>マークアップエンジニア兼Webデザイナー</p>
+							<p>1994.8.31生まれ</p>
+							<p>福岡県北九州市生まれ、<br class="sp_br">愛知県名古屋市育ち</p>
+							<p class="mt30">中学生の頃から<br class="sp_br">ホームページ制作に興味を持ち、<br>HTMLやCSSに触れるようになる。<br>その後名古屋学芸大学<br class="sp_br">メディア造形学部デザイン学科にて<br>ビジュアルデザインを学び、<br>Web制作会社にてコーダーとして働く。</p>
+						</div>
+					</section>
+					<section id="area03">
+						<h2 class="inviewbox">SKILL</h2>
+					<ul class="chart_area inviewbox">
+						<li class="chart" data-percent="75"><a><span>75%</span><span class="text">HTML5</span><span class="cmt">大学生のころから６年間勉強してきました。中学生のころにHTMLを知りそこから興味を持ちました。</span></a></li>
+						<li class="chart" data-percent="60"><a><span>60%</span><span class="text">CSS3</span><span class="cmt">５年ほど経験があります。HTMLのみで制作していましたがCSSで装飾ができることを知り大学の授業で学び、仕事で使用しています。</span></a></li>
+						<li class="chart" data-percent="95"><a><span>95%</span><span class="text">Responsive</span><span class="cmt">社会人になってからレスポンシブデザインを勉強しました。今では必ずレスポンシブで制作しています。</span></a></li>
+						<li class="chart" data-percent="50"><a><span>50%</span><span class="text">jQuery</span><span class="cmt">Webサイトに動きをつける程度のことができます。</span></a></li>
+					</ul>
+					<ul class="chart_area inviewbox">
+						<li class="chart" data-percent="15"><a><span>15%</span><span class="text">WordPress</span><span class="cmt">導入し簡単な構築が可能です。</span></a></li>
+						<li class="chart" data-percent="80"><a><span>80%</span><span class="text">Photoshop</span><span class="cmt">大学生の頃から使用しています。Webサイトデザインではメインで使用しています。</span></a></li>
+						<li class="chart" data-percent="75"><a><span>75%</span><span class="text">Illudtrator</span><span class="cmt">一番よく使用しています。ロゴ制作はこちらがメインです。</span></a></li>
+						<li class="chart" data-percent="10"><a><span>10%</span><span class="text">Adobe XD</span><span class="cmt">最近勉強しています。Photoshopに負けないようこちらでも制作に挑戦しています。</span></a></li>
+					</ul>
+					</section>
+					<section id="area04">
+						<h2 class="inviewbox">WORKS</h2>
+						<ul class="work_area inviewbox">
+							<li>
+								<a href="work/01.html">
+									<figure><img src="img/img_work_01.jpg" alt=""></figure>
+									<p>太平洋工業様ソフトテニスサイト</p>
+								</a>
+							</li>
+							<li>
+								<a href="work/02.html">
+									<figure><img src="img/img_work_02.jpg" alt=""></figure>
+									<p>名古屋観光ホテル様ウエディングサイト</p>
+								</a>
+							</li>
+							<li>
+								<a href="work/03.html">
+									<figure><img src="img/img_work_03.jpg" alt=""></figure>
+									<p>トヨタすまいるライフ様</p>
+								</a>
+							</li>
+							<li>
+								<a href="work/04.html">
+									<figure><img src="img/img_work_04.jpg" alt=""></figure>
+									<p>金印様キャンペーンサイト</p>
+								</a>
+							</li>
+							<li>
+								<a href="work/05.html">
+									<figure><img src="img/img_work_05.jpg" alt=""></figure>
+									<p>中部電力様 交流</p>
+								</a>
+							</li>
+							<li>
+								<a href="work/06.html">
+									<figure><img src="img/img_work_06.jpg" alt=""></figure>
+									<p>ゆうゆう共済様</p>
+								</a>
+							</li>
+						</ul>
+					</section>
+					<section id="area05">
+						<h2 class="inviewbox">CONTACT</h2>
+						<a class="inviewbox" href="mailto:erina.shima0831@gmail.com?subject=ポートフォリオからのお問い合わせ">メールでのお問い合わせはこちら</a>
+					</section>
 					<!-- /contentsBlock -->
 				</div>
 			</article>
 			<!-- /mainBlock -->
 		</div>
 		<footer>
-			
-			<p><small>Copyright &copy; <script>copyright();</script> . All Right Reserved.</small></p>
+			<p><small>Copyright &copy; <script>copyright();</script> SHIMA ERINA. <br class="sp_br">All Right Reserved.</small></p>
 		</footer>
 		<!-- /wrap -->
 	</div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="js/jquery.morphing.min.js"></script>
 <script src="js/top.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery-scrollify@1/jquery.scrollify.min.js"></script>
+<script src="common/js/jquery.inview.min.js"></script>
 </body>
 </html>
