--- a/work/03.html
+++ b/work/03.html
@@ -19,6 +19,15 @@
 		<script src="/common/js/css3-mediaqueries.js"></script>
 	<![endif]-->
 	<script src="/common/js/import.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176846080-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-176846080-1');
+</script>
 </head>
 <body>
   
