--- a/work/01.html
+++ b/work/01.html
@@ -30,27 +30,23 @@
 </script>
 </head>
 <body>
-  
 	<div id="wrap">
-		<header>
+    <header>
 			<ul id="nav">
 				<li><a href="../index.html#area02">ABOUT</a></li>
 				<li><a href="../index.html#area03">SKILL</a></li>
 				<li><a href="../index.html#area04">WORKS</a></li>
 				<li><a href="../index.html#area05">CONTACT</a></li>
 			</ul>
-			</div>
-		  </header>
-      <ul class=""></ul>
 		</header>
-		<div id="mainBlock">
+    <div id="mainBlock">
 			<article>
 				<div id="contentsBlock">
 					<section id="work_area" class="inviewbox">
 						<h1>WORKS</h1>
-						<h2>太平洋工業ソフトテニスサイト</h>
-							<figure><img src="img/work_main_01.jpg"></figure>
-							<figure><img src="img/work_detail_01.png"></figure>
+						<h2>太平洋工業ソフトテニスサイト</h2>
+							<figure><img src="img/work_main_01.jpg" alt="太平洋工業ソフトテニスサイト"></figure>
+							<figure><img src="img/work_detail_01.png" alt="太平洋工業ソフトテニスサイト"></figure>
 							<dl class="work_detail">
 								<dt>概要</dt>
 								<dd>太平洋工業様のソフトテニスWebサイト（リニューアル）</dd>
@@ -68,14 +64,12 @@
 								<dd><a href="https://www.pacific-ind.co.jp/tennis/" target="blank">https://www.pacific-ind.co.jp/tennis/</a></dd>
 							</dl>
 						</section>
-
 					<!-- /contentsBlock -->
 				</div>
 			</article>
 			<!-- /mainBlock -->
 		</div>
 		<footer>
-			
 			<p><small>Copyright &copy; <script>copyright();</script> SHIMA ERINA. <br class="sp_br">All Right Reserved.</small></p>
 		</footer>
 		<!-- /wrap -->
