--- a/work/02.html
+++ b/work/02.html
@@ -39,18 +39,15 @@
 				<li><a href="../index.html#area04">WORKS</a></li>
 				<li><a href="../index.html#area05">CONTACT</a></li>
 			</ul>
-			</div>
-		  </header>
-      <ul class=""></ul>
 		</header>
 		<div id="mainBlock">
 			<article>
 				<div id="contentsBlock">
 					<section id="work_area" class="inviewbox">
 						<h1>WORKS</h1>
-						<h2>名古屋観光ホテルウエディングサイト</h>
-							<figure><img src="img/work_main_02.jpg"></figure>
-							<figure><img src="img/work_detail_02.png"></figure>
+						<h2>名古屋観光ホテルウエディングサイト</h2>
+							<figure><img src="img/work_main_02.jpg" alt="名古屋観光ホテルウエディングサイト"></figure>
+							<figure><img src="img/work_detail_02.png" alt="名古屋観光ホテルウエディングサイト"></figure>
 							<dl class="work_detail">
 								<dt>概要</dt>
 								<dd>名古屋観光ホテル様のウエディングフェアサイト</dd>
@@ -70,14 +67,12 @@
 								<dd><a href="https://www.nagoyakankohotel.co.jp/wedding/weddingfair/" target="blank">https://www.nagoyakankohotel.co.jp/wedding/weddingfair/</a></dd>
 							</dl>
 						</section>
-
 					<!-- /contentsBlock -->
 				</div>
 			</article>
 			<!-- /mainBlock -->
 		</div>
 		<footer>
-			
 			<p><small>Copyright &copy; <script>copyright();</script> SHIMA ERINA. <br class="sp_br">All Right Reserved.</small></p>
 		</footer>
 		<!-- /wrap -->
