--- a/work/04.html
+++ b/work/04.html
@@ -39,9 +39,6 @@
 				<li><a href="../index.html#area04">WORKS</a></li>
 				<li><a href="../index.html#area05">CONTACT</a></li>
 			</ul>
-			</div>
-		  </header>
-      <ul class=""></ul>
 		</header>
 		<div id="mainBlock">
 			<article>
@@ -49,8 +46,8 @@
 					<section id="work_area" class="inviewbox">
 						<h1>WORKS</h1>
 						<h2>金印様　キャンペーンサイト</h2>
-							<figure><img src="img/work_main_04.jpg"></figure>
-							<figure><img src="img/work_detail_04.png"></figure>
+							<figure><img src="img/work_main_04.jpg" alt="金印様　キャンペーンサイト"></figure>
+							<figure><img src="img/work_detail_04.png" alt="金印様　キャンペーンサイト"></figure>
 							<dl class="work_detail">
 								<dt>概要</dt>
 								<dd>金印様　キャンペーンLPサイトの制作</dd>
@@ -70,14 +67,12 @@
 								<dd>（現在非公開）</dd>
 							</dl>
 						</section>
-
 					<!-- /contentsBlock -->
 				</div>
 			</article>
 			<!-- /mainBlock -->
 		</div>
 		<footer>
-			
 			<p><small>Copyright &copy; <script>copyright();</script> SHIMA ERINA. <br class="sp_br">All Right Reserved.</small></p>
 		</footer>
 		<!-- /wrap -->
