--- a/work/05.html
+++ b/work/05.html
@@ -30,7 +30,6 @@
 </script>
 </head>
 <body>
-  
 	<div id="wrap">
 		<header>
 			<ul id="nav">
@@ -39,9 +38,6 @@
 				<li><a href="../index.html#area04">WORKS</a></li>
 				<li><a href="../index.html#area05">CONTACT</a></li>
 			</ul>
-			</div>
-		  </header>
-      <ul class=""></ul>
 		</header>
 		<div id="mainBlock">
 			<article>
@@ -49,8 +45,8 @@
 					<section id="work_area" class="inviewbox">
 						<h1>WORKS</h1>
 						<h2>中部電力様　交流サイト</h2>
-							<figure><img src="img/work_main_05.jpg"></figure>
-							<figure><img src="img/work_detail_05.png"></figure>
+							<figure><img src="img/work_main_05.jpg" alt="中部電力様　交流サイト"></figure>
+							<figure><img src="img/work_detail_05.png" alt="中部電力様　交流サイト"></figure>
 							<dl class="work_detail">
 								<dt>概要</dt>
 								<dd>冊子のWebサイト版を制作</dd>
@@ -68,14 +64,12 @@
 								<dd><a href="https://koryu.chuden.co.jp/" target="blank">https://koryu.chuden.co.jp/</a></dd>
 							</dl>
 						</section>
-
 					<!-- /contentsBlock -->
 				</div>
 			</article>
 			<!-- /mainBlock -->
 		</div>
 		<footer>
-			
 			<p><small>Copyright &copy; <script>copyright();</script> SHIMA ERINA. <br class="sp_br">All Right Reserved.</small></p>
 		</footer>
 		<!-- /wrap -->
